// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSecurityProfileEditDialog > renders correctly when creating new profile 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="Settings that apply to all users attached to this security profile"
    title="New: Security profile"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            counter="100"
            filled="true"
            grow="false"
            hint="Name"
            maxlength="100"
            modelmodifiers="[object Object]"
            modelvalue=""
            placeholder="Name"
            required=""
            rules="(v) => !!v && !!v.trim() || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <multi-line-switch-stub
            class="mt-1"
            disabled="false"
            helptext="Users can only use single sign-on to log in."
            maintext="Require single sign-on (SSO)"
            modelvalue="false"
            samelineinput="false"
          />
          <evocon-v-tooltip-wrap-stub
            disabled="true"
            location="top center"
            offset="-6"
            opendelay="500"
            text="2FA is handled by your SSO provider"
          />
          <div
            class="d-flex align-center mb-2"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext=""
              maintext="User will be logged out after"
              modelvalue="false"
              samelineinput="false"
            />
            <evocon-number-input-stub
              allowfloat="true"
              allownegative="false"
              class="ml-2"
              disabled="true"
              error="false"
              grow="true"
              maxvalue="999999999999999"
              suffix="daysGenitive"
              usechip="true"
            />
          </div>
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsSecurityProfileEditDialog > renders correctly when editing existing profile 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="Settings that apply to all users attached to this security profile"
    title="Default Profile"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            counter="100"
            filled="true"
            grow="false"
            hint="Name"
            maxlength="100"
            modelmodifiers="[object Object]"
            modelvalue="Default Profile"
            placeholder="Name"
            required=""
            rules="(v) => !!v && !!v.trim() || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <multi-line-switch-stub
            class="mt-1"
            disabled="false"
            helptext="Users can only use single sign-on to log in."
            maintext="Require single sign-on (SSO)"
            modelvalue="false"
            samelineinput="false"
          />
          <evocon-v-tooltip-wrap-stub
            disabled="true"
            location="top center"
            offset="-6"
            opendelay="500"
            text="2FA is handled by your SSO provider"
          />
          <div
            class="d-flex align-center mb-2"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext=""
              maintext="User will be logged out after"
              modelvalue="false"
              samelineinput="false"
            />
            <evocon-number-input-stub
              allowfloat="true"
              allownegative="false"
              class="ml-2"
              disabled="true"
              error="false"
              grow="true"
              maxvalue="999999999999999"
              suffix="daysGenitive"
              usechip="true"
            />
          </div>
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsSecurityProfileEditDialog > renders correctly when has absolute timeout error 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="Settings that apply to all users attached to this security profile"
    title="Admin Profile"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            counter="100"
            filled="true"
            grow="false"
            hint="Name"
            maxlength="100"
            modelmodifiers="[object Object]"
            modelvalue="Admin Profile"
            placeholder="Name"
            required=""
            rules="(v) => !!v && !!v.trim() || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <multi-line-switch-stub
            class="mt-1"
            disabled="false"
            helptext="Users can only use single sign-on to log in."
            maintext="Require single sign-on (SSO)"
            modelvalue="true"
            samelineinput="false"
          />
          <evocon-v-tooltip-wrap-stub
            disabled="false"
            location="top center"
            offset="-6"
            opendelay="500"
            text="2FA is handled by your SSO provider"
          />
          <div
            class="d-flex align-center mb-2"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext=""
              maintext="User will be logged out after"
              modelvalue="true"
              samelineinput="false"
            />
            <evocon-number-input-stub
              allowfloat="true"
              allownegative="false"
              class="ml-2"
              disabled="false"
              error="true"
              grow="true"
              maxvalue="999999999999999"
              modelvalue="0"
              suffix="daysGenitive"
              usechip="true"
            />
          </div>
          <span
            class="text-body-small text-error"
          >
            Value must be between {min} and {max}
          </span>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
